--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "css-loader": "^3.6.0",
+    "postcss-custom-media": "^7.0.8",
+    "postcss-loader": "^3.0.0",
+    "postcss-nested": "^4.2.1",
+    "postcss-preset-env": "^6.7.0",
+    "style-loader": "^1.2.1"
+  },
   "scripts": {
     "dev": "next",
     "build": "next build",
