--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A blog for custom articles.",
   "main": "index.js",
   "dependencies": {
+    "classnames": "^2.2.6",
     "next": "^9.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
