--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "classnames": "^2.2.6",
     "next": "^9.4.4",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-markdown": "^4.3.1"
   },
   "devDependencies": {
     "@svgr/cli": "^5.4.0",
